--- a/style.css
+++ b/style.css
@@ -1,48 +1,54 @@
 @font-face {
-    font-family: font1;
-    src: url('NeueHaasDisplayMediu.ttf');
+    font-family: neu;
+    src: url(./NeueHaasDisplayMediu.ttf);
 }
 
 @font-face {
-    font-family: font2; 
+    font-family: neu;
+    font-weight: 100;
     src: url(./NeueHaasDisplayLight.ttf);
 }
 
-@font-face{
-    font-family: font3;
-    src: url(./NeueHaasDisplayRegular.ttf);
-}
-
-*::selection {
-    background-color: black;
-    color: white;
+@font-face {
+    font-family: neu;
+    font-weight: 200;
+    src: url(./NeueHaasDisplayRoman.ttf);
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: font1;
+    font-family: neu;
 }
 
-html,
-body {
+html, body {
     height: 100%;
     width: 100%;
+}
+
+#main {
+    /* background-color: #000; */
+    position: relative;
+    z-index: 10;
 }
 
 #page1 {
     min-height: 100vh;
     width: 100%;
-    background-color: #efeae3;
+    background-color: #EFEAE3;
     position: relative;
     padding: 0 2vw;
 }
 
 nav {
-    padding: 2vw 0;
+    padding: 2vw 0vw;
+    width: 100%;
+    /* background-color: red; */
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 100;
     justify-content: space-between;
 }
 
@@ -54,12 +60,13 @@ nav {
 
 #nav-part2 h4 {
     padding: 10px 20px;
-    border: 1px solid rgba(0, 0, 0, 0.308);
+    border: 1px solid #0000003c;
     border-radius: 50px;
     font-weight: 500;
     color: #000000bb;
-    font-size: 18px;
+    transition: all ease 0.4s;
     position: relative;
+    font-size: 18px;
     overflow: hidden;
 }
 
@@ -69,11 +76,10 @@ nav {
     height: 100%;
     width: 100%;
     background-color: black;
-    color: white;
     left: 0;
     bottom: -100%;
-    transition: all ease 0.3s;
     border-radius: 50%;
+    transition: all ease 0.4s;
 }
 
 #nav-part2 h4:hover::after {
@@ -82,20 +88,24 @@ nav {
 }
 
 #nav-part2 h4 a {
-    text-decoration: none;
     color: #000000bb;
-    z-index: 9;
+    text-decoration: none;
     position: relative;
-    font-size: 18px;
+    z-index: 9;
 }
 
-#nav-part2 h4 a:hover {
-    color: white;
+#nav-part2 h4:hover a {
+    color: #fff;
+}
+
+nav h3 {
+    display: none;
 }
 
 #center {
     height: 65vh;
     width: 100%;
+    /* background-color: orange; */
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
@@ -103,261 +113,561 @@ nav {
     padding-bottom: 2.5vw;
 }
 
-#left {
-    width: 40vw;
+#left h3 {
+    width: 25vw;
     font-size: 1.8vw;
     line-height: 2vw;
 }
 
-#right h1 {
+#center h1 {
     font-size: 10vw;
-    line-height: 8vw;
     text-align: right;
+    line-height: 8vw;
 }
 
 #page1 video {
-    width: 100%;
+    position: relative;
     border-radius: 30px;
     margin-top: 4vw;
+    width: 100%;
+}
+
+#hero-shape {
+    position: absolute;
+    width: 46vw;
+    height: 36vw;
+    right: 0;
+    top: 65vh;
+}
+
+#hero-1 {
+    background-color: #FE320A;
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    filter: blur(10px);
+    position: absolute;
+}
+
+#hero-2 {
+    background: linear-gradient(#FE320A, #fe3f0a);
+
+    height: 30vw;
+    width: 30vw;
+    border-radius: 50%;
+    position: absolute;
+    animation-name: anime2;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    filter: blur(25px);
+}
+
+#hero-3 {
+    background: linear-gradient(#FE320A, #fe3f0a);
+    height: 30vw;
+    position: absolute;
+    width: 30vw;
+    border-radius: 50%;
+    filter: blur(25px);
+    animation-name: anime1;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes anime1 {
+    from {
+        transform: translate(55%, -3%);
+    }
+
+    to {
+        transform: translate(0%, 10%);
+    }
+}
+
+@keyframes anime2 {
+    from {
+        transform: translate(5%, -5%);
+    }
+
+    to {
+        transform: translate(-20%, 30%);
+    }
+}
+
+#page2 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 8vw 0;
     position: relative;
 }
 
-#hero-shape {
-    position: absolute;
-    height: 36vw;
-    width: 46vw;
-    right: 0;
-    top: 67vh;
-}
-
-#hero1 {
-    height: 100%;
-    width: 100%;
-    background-color: #FE320A;
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-    filter: blur(15px);
-    position: absolute;
-}
-
-#hero2 {
-    height: 30vw;
-    width: 30vw;
-    background:linear-gradient(#FE320A,#fe3f0a);
-    border-radius: 50%;
-    filter: blur(20px);
-    position: absolute;
-     animation-name: anima2;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
-}
-
-#hero3 {
-    height: 30vw;
-    width: 30vw;
-    background:linear-gradient(#FE320A,#fe3f0a);
-    border-radius: 50%;
-    filter: blur(20px);
-    position: absolute;
-    animation-name: anima1;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
-}
-
-@keyframes anima1 {
-    from{
-        transform: translate(55%,-2%);
-    }
-    to{
-        transform: translate(0%,10%); 
-    }
-}
-@keyframes anima2 {
-    from{
-        transform: translate(3%,-5%);
-    }
-    to{
-        transform: translate(-20%,30%); 
-    }
-}
-
-/* Responsive page 1  */
-@media (max-width: 1280px){
-#left {
-    width: 45vw;
-    
-}
-    #left h3 {
-    font-size: 2.5vw;
-    line-height: 2vw;
-}
-}
-@media (max-width:1024px) {
-    #main{
-        overflow-y: hidden;
-    }
-    #center {
-        height: 40vh;
-        width: 100%;
-   }
-   #page1{
-    padding: 0 4vw;
-   
-   }
-    
-}
-@media (max-width: 640px) {
-    *{
-        font-family: font1;
-    }
-    #page1{
-        width: 100vw;
-        min-height: 2vh;
-    }
-    #center {
-        height: 30vh;
-        width: 100%;
-   }
-   #left{
-    width: 47vw;
-   }
-   #left h3{
-    font-size: 3vw;
-    line-height: 3.0vw;
-   }
-   #right h1 {
-    font-size: 7vw;
-   }
-
-#hero-shape {
-    position: absolute;
-    height: 36vw;
-    width: 46vw;
-    right: 0;
-    top: 35vh;
-}
-
-}
-
-#page2{
-    height: 100vh;
-    width: 100%;
-    background-color:#efeae3;
-    padding: 8vw 0;
-}
-#moving-text{
-    overflow-x:auto ;
+#moving-text {
+    overflow-x: auto;
     white-space: nowrap;
 }
-#moving-text::-webkit-scrollbar{
+
+#moving-text::-webkit-scrollbar {
     display: none;
 }
-.con{
+
+.con {
     white-space: nowrap;
     display: inline-block;
     animation-name: move;
-    animation-duration: 13s;
+    animation-duration: 10s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
-#moving-text h1{
-font-size: 8vw;
-display: inline-block;
+
+#moving-text h1 {
+    font-size: 9vw;
+    /* background-color: lightblue; */
+    display: inline-block;
 }
-#gola{
-    width: 60px;
-    height: 60px;
-    background-color: #FE320A;
+
+#gola {
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
     display: inline-block;
+    background-color: #FE320A;
     margin: 1vw 2vw;
 }
 
 @keyframes move {
-    from{
-        transform: translate(0);
+    from {
+        transform: translateX(0);
     }
-    to{
-        transform: translate(-100%);
+
+    to {
+        transform: translateX(-100%);
     }
 }
 
-#page2-bottom{
+#page2-bottom {
     height: 80vh;
-    width: 100%; 
+    width: 100%;
+    /* background-color: aliceblue; */
+    padding: 4.5vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 4.5vw;
+    position: relative;
+    z-index: 9;
 }
 
-#page2-bottom h1{
-font-size: 4vw;
-width: 60%;
-line-height: 4vw;
-}
-#bottom-part2{
-    width: 25%;
-}
-#bottom-part2 img{
-width: 100%;
-border-radius: 15px;
+#page2-bottom h1 {
+    font-size: 4vw;
+    width: 60%;
+    line-height: 4vw;
 }
 
-#bottom-part2 p{
-    font-family: font3;
+#bottom-part2 {
+    width: 20%;
+    /* background-color: aqua; */
+}
+
+#bottom-part2 img {
+    width: 100%;
+    border-radius: 15px;
+}
+
+#bottom-part2 p {
     font-weight: 200;
     margin-top: 2vw;
-    font-size: 1.5vw;
+    font-size: 1vw;
 }
-/* Responsive page 2 */
-@media (max-width: 1280px){
-#gola{
-    width: 5vw;
-    height: 6vh;
-  
+
+#page2 #gooey {
+    height: 32vw;
+    width: 32vw;
+    position: absolute;
+    border-radius: 50%;
+    background: linear-gradient(to top right, #ff2d03, #ff5c0b);
+    /* background: linear-gradient(to top right,red,blue); */
+
+
+    top: 58%;
+    left: 25%;
+    filter: blur(20px);
+    animation-name: gooey;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+
 }
-}
-@media (max-width:1024px){
-    #gola{
-        width: 40px;
-        height: 40px;
+
+@keyframes gooey {
+    from {
+        filter: blur(20px);
+        transform: translate(10%, -10%) skew(0);
     }
-    #page2-bottom{
-        height: 50vh;
-        width: 100%; 
+
+    to {
+        filter: blur(30px);
+        transform: translate(-10%, 10%) skew(-12deg);
     }
-    #page2{
-    padding: 8vw 0;
 }
+
+
+
+
+#page3 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 4vw 0;
 }
-@media (max-width: 640px){
-    #page2{
-        height: 60vh;
-        
+
+.elem {
+    height: 150px;
+    width: 100%;
+    position: relative;
+
+    border-bottom: 1px solid #38383864;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+}
+
+.elem h2 {
+    font-size: 3vw;
+    position: relative;
+    z-index: 9;
+}
+
+.elem .overlay {
+    height: 100%;
+    width: 100%;
+    background-color: orange;
+    position: absolute;
+    left: 0;
+    top: -100%;
+    transition: all ease 0.25s;
+}
+
+.elem:hover .overlay {
+    top: 0;
+}
+
+
+
+#fixed-image {
+    height: 30vw;
+    width: 24vw;
+    /* background-color: red; */
+    border-radius: 15px;
+    position: fixed;
+    z-index: 99;
+    left: 50%;
+    top: 25%;
+    display: none;
+    background-size: cover;
+    background-position: center;
+}
+
+#page4 {
+    height: 70vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 10vw 2vw;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    width: 30%;
+    border-left: 1px solid #aeadad;
+    padding: 0 2vw;
+}
+
+#page5 {
+    height: 100vh;
+    width: 100%;
+    /* background-color: #EFEAE3; */
+}
+
+#footer {
+    position: fixed;
+    height: 105vh;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    z-index: 9;
+    bottom: 0;
+    display: flex;
+    /* align-items: flex-end; */
+    justify-content: flex-end;
+    flex-direction: column;
+    padding: 1vw 3vw;
+}
+
+#footer h1 {
+    font-size: 23vw;
+}
+
+#footer-div {
+    height: 20vh;
+    width: 100%;
+    background-color: red;
+}
+
+#footer-bottom {
+    border-top: 1px solid #dadada;
+    height: 10vh;
+    width: 100%;
+}
+
+#full-scr {
+    height: 100vh;
+    width: 100%;
+    background-color: #00000070;
+    position: fixed;
+    z-index: 99;
+    top: -100%;
+    transition: all ease 0.5s;
+}
+
+#full-div1 {
+    height: 50%;
+    width: 100%;
+    background-color: #EFEAE3;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+}
+
+@media (max-width:600px) {
+
+    #page1 {
+        min-height: 100vh;
+        width: 100vw;
+        padding: 0 0vw;
     }
-    #gola{
-        width: 25px;
-        height: 25px;
+
+    nav {
+        padding: 8vw 5vw;
+        background-color: #EFEAE3;
+        /* padding: 0 5vw; */
     }
-    #page2-bottom{
+
+    nav img {
+        transition: all ease 0.2s;
+        height: 9vh;
+    }
+
+    #nav-part2 {
+        display: none;
+    }
+
+    nav h3 {
+        display: block;
+        padding: 3vw 5vw;
+        border: 1px solid #ababab;
+        border-radius: 50px;
+        font-size: 4vw;
+        font-weight: 200;
+        padding-left: 10vw;
+    }
+
+    #center {
+        height: 62vh;
         width: 100%;
-        height: 35vh;
+        /* background-color: orange; */
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        border-bottom: 1px solid #0000003c;
+        padding: 7vw 5vw;
+        padding-bottom: 10vw;
+        flex-direction: column-reverse;
+        position: relative;
+        z-index: 9;
     }
-    #page2-bottom h1{
-width: 57%;
+
+    #left h3 {
+        width: 80%;
+        font-size: 5.5vw;
+        line-height: 6vw;
+    }
+
+    #center h1 {
+        font-size: 17vw;
+        text-align: right;
+        line-height: 15vw;
+    }
+
+    #page1 video {
+        position: relative;
+        border-radius: 15px;
+        margin-top: 4vw;
+        height: 70vh;
+        object-fit: cover;
+        object-position: center;
+        width: 92%;
+        margin-left: 4%;
+    }
+
+    #page2 {
+        min-height: 100vh;
+        width: 100%;
+        background-color: #EFEAE3;
+        padding: 8vw 0;
+        position: relative;
+    }
+
+    #moving-text {
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+
+    #moving-text::-webkit-scrollbar {
+        display: none;
+    }
+
+    .con {
+        white-space: nowrap;
+        display: inline-block;
+        animation-name: move;
+        animation-duration: 10s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+    }
+
+    #moving-text h1 {
+        font-size: 15vw;
+        /* background-color: lightblue; */
+        display: inline-block;
+    }
+
+    #gola {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #FE320A;
+        margin: 2vw 2vw;
+    }
+
+    #page2-bottom {
+        height: 90vh;
+        width: 100%;
+        /* background-color: aliceblue; */
+        padding: 10vw 4vw;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        position: relative;
+        flex-direction: column;
+        z-index: 9;
+    }
+
+    #page2-bottom h1 {
+        font-size: 8.2vw;
+        width: 100%;
+        line-height: 9vw;
+    }
+
+    #bottom-part2 {
+        width: 70%;
+        /* background-color: aqua; */
+    }
+
+    #bottom-part2 img {
+        width: 100%;
+        border-radius: 10px;
+    }
+
+    #bottom-part2 p {
+        font-weight: 200;
+        margin-top: 2vw;
+        font-size: 3vw;
+    }
+
+    #page2 #gooey {
+        height: 62vw;
+        width: 62vw;
+        position: absolute;
+        border-radius: 50%;
+        background: linear-gradient(to top right, #ff2d03, #ff5c0b);
+        /* background: linear-gradient(to top right,red,blue); */
+
+
+        top: 58%;
+        left: 25%;
+        filter: blur(20px);
+        animation-name: gooey;
+        animation-duration: 6s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+        animation-timing-function: ease-in-out;
+
+    }
+
+
 }
-#bottom-part2{
-    width: 35%;
+
+#loader{
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    transition: all ease 0.7s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#bottom-part2 p{
-    font-family: font3;
-    font-weight: 200;
-    margin-top: 2vw;
-    font-size: 2vw;
+
+#loader h1{
+    font-size: 4vw;
+    color: transparent;
+    background: linear-gradient(to right,orange,orangered);
+    -webkit-background-clip: text;
+    position: absolute;
+    opacity: 0;
+    animation-name: load;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-timing-function: linear;
 }
+#loader h1:nth-child(2){
+    animation-delay: 2s;
+}
+#loader h1:nth-child(3){
+    animation-delay: 3s;
+}
+
+@keyframes load {
+    0%{
+        opacity: 0;
+    }
+    10%{
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+@media (max-width:600px) {
+    #loader h1{
+        font-size: 9vw;
+      
+    }
 }
